# django-openapi

./: .gitignore  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  apispec_demo.py  authentication.html  browse-tests.sh  devtools.py  get-started.html  index.html  intro.html  markdown-page.html  mypy.ini  pytest.ini  requirements.txt  respond.html  response.html  setup.cfg  setup.py  sitemap.xml  tox.ini
dev-note/: graph.html
django_openapi/: __init__.py  docs.py  exceptions.py  model2schema.py  pagination.py  permissions.py  typing.py  urls.py
docs/: 404.html  docusaurus.config.js  index.html  package-lock.json  package.json  sitemap.xml
docs-site/: docusaurus.config.js  package-lock.json  package.json
docs-website/: package-lock.json  package.json
docs2/: api.rst  conf.py  demo.rst  index.rst
example/: api.py  settings.py  urls.py
openapi/: __init__.py  apps.py  core.py  enums.py  globals.py  operation.py  parameters.py  parse.py  permissions.py  router.py  typing.py  ui.py  utils.py  views.py
request/: body.html  cookie.html  header.html  path.html  query.html  style.html
requirements/: dev.txt  testing.txt  typing.txt
scripts/: download_swagger_ui_dependents.py
tests/: conftest.py  settings.py  test.py  test_blank_parameter.py  test_core.py  test_custom_schemas.py  test_django_openapi.py  test_docs.py  test_enum.py  test_fallback.py  test_fields.py  test_import_object.py  test_model.py  test_model2schema.py  test_nullable.py  test_operation.py  test_pagination.py  test_parameter.py  test_parameter_style.py  test_parameters.py  typing.py  (+16 more)
(+421 files in other folders)
