[metadata]
name = django-openapi
version = attr: django_openapi.__version__
author = Lee
author_email = 294622946@qq.com
url = https://github.com/Dog-Egg/django-openapi

[options]
packages = find:
install_requires =
    python-dateutil
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    django_openapi
    django_openapi.*