[metadata]
name = django-openapi
version = attr: django_openapi.__version__
author = Lee
author_email = 294622946@qq.com
url = https://github.com/Dog-Egg/django-openapi

[options]
package_dir =
    =src
packages = find:
install_requires =
    python-dateutil
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.packages.find]
where = src